examples/test/testpolicy17751.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17751
  namespace: namespace393
spec:
  podSelector:
    matchLabels:
      key0: value39
      key19: value47
      key4: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value32
      podSelector:
        matchLabels:
          key34: value40
          key3: value32
          key24: value25
